force-app/main/default/objects/CampaignMember/fields/Basis__c.field-meta.xml
<CustomField>
    <fullName>Basis__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>basis used for pricing</description>
    <inlineHelpText>basis used for pricing</inlineHelpText>
    <label>Basis</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>CAMPMEMB2: The Basis field has to match an Index of record type CES Basis</errorMessage>
        <filterItems>
            <field>Index__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>CES Basis</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Index__c</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>