force-app/main/default/objects/CampaignMember/fields/FOM_Nomination__c.field-meta.xml
<CustomField>
    <fullName>FOM_Nomination__c</fullName>
    <label>FOM Nomination</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>