force-app/main/default/objects/CampaignMember/fields/Margin_Dth__c.field-meta.xml
<CustomField>
    <fullName>Margin_Dth__c</fullName>
    <label>Margin ($/Dth)</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>