force-app/main/default/objects/CampaignMember/fields/PageTemplate__c.field-meta.xml
<CustomField>
    <fullName>PageTemplate__c</fullName>
    <description>which version of the pricing template will the customer see?</description>
    <inlineHelpText>which version of the pricing template will the customer see?</inlineHelpText>
    <label>PageTemplate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Illinois Gas and Electric</fullName>
            </value>
            <value>
                <fullName>Illinois Gas Only</fullName>
            </value>
            <value>
                <fullName>Illinois Electric Only</fullName>
            </value>
            <value>
                <fullName>Illinois Cash Price</fullName>
            </value>
            <value>
                <fullName>Illinois Gas and Electric All Load Curves</fullName>
            </value>
            <value>
                <fullName>Illinois Gas Only All Load Curves</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>