force-app/main/default/objects/CampaignMember/fields/Sales_REP__c.field-meta.xml
<CustomField>
    <fullName>Sales_REP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>whose name appears on the market reports, or the from lines, and who is responsible for updating and maintaining this campaign member</description>
    <inlineHelpText>whose name appears on the market reports, or the from lines, and who is responsible for updating and maintaining this campaign member</inlineHelpText>
    <label>Sales REP</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$Profile.UserType</field>
            <operation>equals</operation>
            <value>Standard</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>