force-app/main/default/objects/CampaignMember/fields/Sales_Rep_Email__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Email__c</fullName>
    <formula>Sales_REP__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Rep Email</label>
    <type>Text</type>
</CustomField>