force-app/main/default/objects/CampaignMember/fields/Sales_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Name__c</fullName>
    <formula>Sales_REP__r.FirstName &amp; &quot; &quot; &amp; Sales_REP__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Rep Name</label>
    <type>Text</type>
</CustomField>