force-app/main/default/objects/CampaignMember/fields/Sales_Rep_Phone__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Phone__c</fullName>
    <formula>Sales_REP__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Rep Phone</label>
    <type>Text</type>
</CustomField>