force-app/main/default/objects/CampaignMember/fields/Storage_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Storage_Strategy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Storage Strategy</label>
    <referenceTo>Storage_Strategy__c</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>