force-app/main/default/objects/CampaignMember/fields/Target_Account__c.field-meta.xml
<CustomField>
    <fullName>Target_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Company this campaign is targeted for (if different than the contact&#39;s Account, for example: Contact Roles)</description>
    <inlineHelpText>Company this campaign is targeted for (if different than the contact&#39;s Account, for example: Contact Roles)</inlineHelpText>
    <label>Target Company (Account)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>