force-app/main/default/objects/CampaignMember/recordTypes/Standard_Campaign_Member.recordType-meta.xml
<RecordType>
    <fullName>Standard_Campaign_Member</fullName>
    <active>true</active>
    <label>Standard Campaign Member</label>
</RecordType>